@@ -11,7 +11,7 @@
 LY_DEFINE (ly_paper_score_paper_systems, "ly:paper-score-paper-systems",
 	   1, 0, 0,
 	   (SCM paper_score),
-	   "Return vector of Paper_system objects from @var{paper-score}.")
+	   "Return vector of paper_system objects from @var{paper-score}.")
 {
   Paper_score *pscore = dynamic_cast<Paper_score *> (unsmob_music_output (paper_score));
   SCM_ASSERT_TYPE (pscore, paper_score, SCM_ARG1, __FUNCTION__, "Paper score (Music output)");
