@@ -22,9 +22,9 @@
   (make-procedure-with-setter ly:grob-property
 			      ly:grob-set-property!))
 
-(define-public ly:paper-system-property
-  (make-procedure-with-setter ly:paper-system-property
-			      ly:paper-system-set-property!))
+(define-public ly:prob-property
+  (make-procedure-with-setter ly:prob-property
+			      ly:prob-set-property!))
 
 (define-public (music-map function music)
   "Apply @var{function} to @var{music} and all of the music it contains.
